--- a/src/app/modules/transaction-analysis/transaction-analysis.component.html
+++ b/src/app/modules/transaction-analysis/transaction-analysis.component.html
@@ -1,3 +1,10 @@
-<app-chart></app-chart>
-<app-barchart></app-barchart>
-<app-line-chart></app-line-chart>
+<div class="transaction-analysis-container">
+    <div class="long-container">
+        <app-barchart></app-barchart>
+    </div>
+    <div class="long-container">
+        <app-line-chart></app-line-chart>
+    </div>
+
+    <app-chart></app-chart>
+</div>
