--- a/src/app/modules/login/login/login.component.html
+++ b/src/app/modules/login/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <header>
+  <div class="label-container">
     <h2>Логин</h2>
-  </header>
+  </div>
 
   <div *ngIf="backendErrorMessage" class="alert alert-danger" role="alert">
     {{ backendErrorMessage }}
