--- a/src/app/modules/registration/registration/registration.component.html
+++ b/src/app/modules/registration/registration/registration.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <header>
+  <div class="label-container">
     <h2>Регистрация</h2>
-  </header>
+  </div>
 
   <div *ngIf="successMessage" class="alert alert-success" role="alert">
     {{ successMessage }}
@@ -11,7 +11,7 @@
     {{ errorMessage }}
   </div>
 
-  <div *ngIf="!passwordsMatch()" class="error-message">
+  <div *ngIf="!passwordsMatch()" class="alert alert-danger" role="alert">
     Пароли не совпадают
   </div>
 
