--- a/src/app/modules/startpage/startpage.component.scss
+++ b/src/app/modules/startpage/startpage.component.scss
@@ -5,7 +5,7 @@
   background-color: #FDF2E9;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   padding: 20px;
 }
@@ -83,14 +83,6 @@
   gap: 20px;
   padding: 20px;
   width: 100%;
-}
-
-.grid-item {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  width: 100%;
-  padding: 20px;
 }
 
 @media (max-width: 600px) {
