--- a/src/app/modules/transaction-form/transaction.component.scss
+++ b/src/app/modules/transaction-form/transaction.component.scss
@@ -1,31 +1,28 @@
 @import '../../../styles/shared-styles.scss';
 
-.transaction-container {
-  max-width: 400px;
-  margin: 20px auto;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
 
-  .transaction-title {
-    text-align: center;
-    color: var(--charcoal-blue);  
-    font-size: 2em;  
-    margin-bottom: 20px;  
+  .label-container {
+    margin: 10px;
   }
 
   form {
-    display: flex;
-    flex-direction: column;
+    @include form-container;
+    text-align: left;
+    background-color: #ffff;
 
     .form-group {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 20px;
+      margin-top: var(--padding);
 
       label {
-        margin-bottom: 8px;
-        color: #555;
+        display: block;
+        font-weight: bold;
+        margin-bottom: 5px;
       }
 
       input[type="text"],
@@ -33,13 +30,7 @@
       input[type="date"],
       select,
       button {
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        font-size: 16px;
-        margin-top: 4px;
-        width: 100%; 
-        box-sizing: border-box; 
+        @include input-styles;
       }
 
       input[type="checkbox"] {
@@ -64,13 +55,10 @@
       }
     }
 
-    .button-container {
-      display: flex;
-      justify-content: center;
-    }
-
-    .custom-button {
-      @include primary-button; 
+    button {
+      @include primary-button;
+      padding: 10px;
+      font-size: 1rem;
     }
   }
 
