--- a/src/styles/shared-styles.scss
+++ b/src/styles/shared-styles.scss
@@ -18,6 +18,7 @@
     color: var(--text-color);
     border: none;
     padding: 1rem;
+    margin: 10px auto;
     border-radius: 0.5rem;
     cursor: pointer;
     font-family: 'Arial', sans-serif;
@@ -114,17 +115,23 @@ h4 {
 
 label {
     display: block;
-    margin-bottom: 5px;
+    margin: 10px auto;
     color: var(--text-color);
 }
 
+a {
+    color: var(--tertiary-color);
+    font-size: bold;
+}
+
 input {
+    margin: 10px auto;
     padding: 10px;
-    border: 1px solid var(--light-gray);
-    border-radius: 5px;
+    border: 10px solid var(--text-color);
+    border-radius: 10px;
     font-size: 1rem;
     width: 100%;
-    margin-bottom: 10px;
+    box-sizing: border-box;
 
     &:focus {
         outline: none;
