refactor navigation on the dashboard page

--- a/src/app/modules/category-limits/category-limits.component.html
+++ b/src/app/modules/category-limits/category-limits.component.html
@@ -15,6 +15,6 @@
         </div>
     </div>
     <div class="card-footer">
-        <a class="btn btn-link" href="/category-limits-overview" target="_blank">Все лимиты</a>
+        <a class="btn btn-link" (click)="navigateTLimits()" target="_blank">Все лимиты</a>
     </div>
 </div>
