--- a/src/app/modules/chart/chart.component.html
+++ b/src/app/modules/chart/chart.component.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="card-footer">
-      <a class="btn btn-link" href="/transaction-chart" target="_blank">Статистика</a>
+      <a class="btn btn-link" (click)="navigateToCharts()" target="_blank">Статистика</a>
     </div>
   </div>
 </div>
