--- a/src/app/modules/financial-goal-card/financial-goal-card.component.html
+++ b/src/app/modules/financial-goal-card/financial-goal-card.component.html
@@ -16,6 +16,6 @@
         </div>
     </div>
     <div class="card-footer">
-        <button class="btn btn-link" (click)="navigateToCreateGoal()" href="/financial-goal-form" target="_blank">Все цели</button>
+        <button class="btn btn-link" (click)="navigateToGoals()" target="_blank">Все цели</button>
     </div>
 </div>
