--- a/src/app/modules/financial-goal-form/financial-goal-form.component.html
+++ b/src/app/modules/financial-goal-form/financial-goal-form.component.html
@@ -32,3 +32,6 @@
   </form>
   <app-message [message]="message" [messageType]="messageType"></app-message>
 </div>
+
+
+<savings-calculator></savings-calculator>
