--- a/src/app/modules/last-transactions/last-transactions.component.html
+++ b/src/app/modules/last-transactions/last-transactions.component.html
@@ -18,6 +18,6 @@
     </div>
   </div>
   <div class="card-footer">
-    <a class="btn btn-link" href="/transaction-overview" target="_blank">Транзакции</a>
+    <a class="btn btn-link" (click)="navigateToTransactions()" target="_blank">Транзакции</a>
   </div>
 </div>
