--- a/src/app/modules/last-transactions/last-transactions.component.html
+++ b/src/app/modules/last-transactions/last-transactions.component.html
@@ -1,5 +1,3 @@
-<!-- last-transactions.component.html -->
-
 <div class="card">
   <div class="custom-card-header">
     <h5>Последние транзакции</h5>
@@ -18,6 +16,6 @@
     </div>
   </div>
   <div class="card-footer">
-    <a class="btn btn-link" (click)="navigateToTransactions()" target="_blank">Транзакции</a>
+    <a class="btn btn-link" (click)="navigateToTransactions()" target="_blank">Все транзакции</a>
   </div>
 </div>
