--- a/src/app/modules/transaction-analysis/transaction-analysis.component.scss
+++ b/src/app/modules/transaction-analysis/transaction-analysis.component.scss
@@ -4,16 +4,16 @@
 .transaction-analysis-container {
     @include container-styles;
     display: flex;
-    flex-direction: column; // Stack charts vertically
-    align-items: center; // Center horizontally
+    flex-direction: column;  
+    align-items: center; 
     gap: 20px;
-    max-width: 1200px; // Set maximum width
-    margin: 20px auto; // Center the container horizontally on the page
+    max-width: 1200px;  
+    margin: 20px auto;  
 }
 
 .transaction-analysis-container>* {
-    width: 100%; // Ensure charts fill the width
-    max-width: calc(100% - 40px); // Adjust for gap
+    width: 100%;  
+    max-width: calc(100% - 40px);  
     position: relative;
 }
 
@@ -29,9 +29,9 @@
 }
 
 .transaction-analysis-container>app-chart:last-child {
-    max-width: calc(100% - 20px); // Adjust the width for the last chart
+    max-width: calc(100% - 20px); 
     display: flex;
-    justify-content: center; // Center horizontally
+    justify-content: center;  
 }
 
 /* Media queries for responsive layouts */
