--- a/src/app/modules/savings-calculator/savings-calculator.component.scss
+++ b/src/app/modules/savings-calculator/savings-calculator.component.scss
@@ -1,7 +1,7 @@
 // Variables
 $primary-color: #263238; // Dark blue-gray
 $secondary-color: #78909C; // Light blue-gray
-$accent-color: #ECEFF1; // Light gray
+$accent-color: #ffff; // Light gray
 $font-family: 'Arial', sans-serif;
 
 // Base Styles
