--- a/src/app/modules/financial-goal-form/financial-goal-form.component.html
+++ b/src/app/modules/financial-goal-form/financial-goal-form.component.html
@@ -1,37 +1,42 @@
-<div class="savings-calculator">
-  <h2>Создать Финансовую Цель</h2>
-  <form (ngSubmit)="createFinancialGoal()" #financialGoalForm="ngForm">
-    <div class="form-group">
-      <label for="name">Название:</label>
-      <input type="text" id="name" name="name" [(ngModel)]="financialGoal.name" required>
-      <div
-        *ngIf="financialGoalForm.controls['name'].invalid && (financialGoalForm.controls['name'].dirty || financialGoalForm.controls['name'].touched)"
-        class="error">
-        Название обязательно для заполнения.
-      </div>
+<div class="outer-container">
+  <div class="goal-form-container">
+    <div class="savings-calculator">
+      <h2>Создать Финансовую Цель</h2>
+      <form (ngSubmit)="createFinancialGoal()" #financialGoalForm="ngForm">
+        <div class="form-group">
+          <label for="name">Название:</label>
+          <input type="text" id="name" name="name" [(ngModel)]="financialGoal.name" required>
+          <div
+            *ngIf="financialGoalForm.controls['name'].invalid && (financialGoalForm.controls['name'].dirty || financialGoalForm.controls['name'].touched)"
+            class="error">
+            Название обязательно для заполнения.
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="sum">Сумма:</label>
+          <input type="number" id="sum" name="sum" [(ngModel)]="financialGoal.sum" required min="0.01">
+          <div
+            *ngIf="financialGoalForm.controls['sum'].invalid && (financialGoalForm.controls['sum'].dirty || financialGoalForm.controls['sum'].touched)"
+            class="error">
+            Сумма обязательна для заполнения и должна быть больше 0.
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="endDate">Количество месяцев:</label>
+          <input type="number" id="endDate" name="endDate" [(ngModel)]="financialGoal.endDate" required min="1">
+          <div
+            *ngIf="financialGoalForm.controls['endDate'].invalid && (financialGoalForm.controls['endDate'].dirty || financialGoalForm.controls['endDate'].touched)"
+            class="error">
+            Количество месяцев обязательно для заполнения и должно быть больше 0.
+          </div>
+        </div>
+        <button type="submit">Создать</button>
+      </form>
+      <app-message [message]="message" [messageType]="messageType"></app-message>
     </div>
-    <div class="form-group">
-      <label for="sum">Сумма:</label>
-      <input type="number" id="sum" name="sum" [(ngModel)]="financialGoal.sum" required min="0.01">
-      <div
-        *ngIf="financialGoalForm.controls['sum'].invalid && (financialGoalForm.controls['sum'].dirty || financialGoalForm.controls['sum'].touched)"
-        class="error">
-        Сумма обязательна для заполнения и должна быть больше 0.
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="endDate">Количество месяцев:</label>
-      <input type="number" id="endDate" name="endDate" [(ngModel)]="financialGoal.endDate" required min="1">
-      <div
-        *ngIf="financialGoalForm.controls['endDate'].invalid && (financialGoalForm.controls['endDate'].dirty || financialGoalForm.controls['endDate'].touched)"
-        class="error">
-        Количество месяцев обязательно для заполнения и должно быть больше 0.
-      </div>
-    </div>
-    <button type="submit">Создать</button>
-  </form>
-  <app-message [message]="message" [messageType]="messageType"></app-message>
+  </div>
+
+  <div class="savings-calculator-container">
+    <savings-calculator></savings-calculator>
+  </div>
 </div>
-
-
-<savings-calculator></savings-calculator>
