refactor savings progress

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -35,7 +35,7 @@
       <li class="nav-item dropdown" *ngIf="isLoggedIn()">
         <a class="nav-link dropdown-toggle link" href="#" id="goalsDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          Цели
+          Накопления
         </a>
         <div class="dropdown-menu" aria-labelledby="goalsDropdown">
           <a class="dropdown-item link" routerLink="/create-goal">Создать</a>
