--- a/src/app/modules/savings-progress/savings-progress.component.scss
+++ b/src/app/modules/savings-progress/savings-progress.component.scss
@@ -4,7 +4,7 @@
 
 .progress {
     height: 20px;
-    background-color: #f5f5f5;
+    background-color: #d8d8d8;
     border-radius: 4px;
     overflow: hidden;
 }
@@ -14,6 +14,6 @@
     line-height: 20px;
     color: #fff;
     text-align: center;
-    background-color: #007bff;
+    background-color: #B58FA4;
     transition: width 0.6s ease;
 }
