--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -2,15 +2,15 @@
   <div class="dashboard-content">
     <div class="dashboard-items">
       <div class="row single-item">
-        <app-finance-card></app-finance-card>
+        <balance-card></balance-card>
       </div>
       <div class="row double-item">
-        <app-financial-goal-card></app-financial-goal-card>
-        <app-category-limits></app-category-limits>
+        <financial-goal-card></financial-goal-card>
+        <category-limits-card></category-limits-card>
       </div>
       <div class="row double-item">
-        <app-last-transactions></app-last-transactions>
-        <app-chart></app-chart>
+        <transactions-card></transactions-card>
+        <doughnut-chart-card></doughnut-chart-card>
       </div>
     </div>
   </div>
