--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 html,
 body {
   background-color: var(--background-color);
-  // margin: 0;
-  // padding: 0;
-  // height: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
