--- a/src/styles/shared-styles.scss
+++ b/src/styles/shared-styles.scss
@@ -17,7 +17,7 @@
     background-color: var(--primary-color);
     color: var(--text-color);
     border: none;
-    padding: 1rem;
+    padding: 10px;
     margin: 10px auto;
     border-radius: 0.5rem;
     cursor: pointer;
@@ -124,9 +124,8 @@ a {
 }
 
 input {
-    margin: 10px auto;
+    // margin: 10px auto;
     padding: 10px;
-    border: 10px solid var(--text-color);
     border-radius: 10px;
     font-size: 1rem;
     width: 100%;
