refactor dashboard cards

--- a/src/app/modules/transaction-analysis/transaction-analysis.component.html
+++ b/src/app/modules/transaction-analysis/transaction-analysis.component.html
@@ -6,5 +6,5 @@
         <app-line-chart></app-line-chart>
     </div>
 
-    <app-chart></app-chart>
+    <doughnut-chart-card></doughnut-chart-card>
 </div>
